maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: not found: type int
  def res:Array[int] = (-1,1)
                ^JediEscaper:55: error: not found: type int
  var bagglePos = new Array[int](2)
                            ^